# Spira

./: .clangd-format  .dockerignore  .gitignore  BENCHMARKS.md  CMakeLists.txt  Dockerfile  README.md  STAGES.md  bench_all_stages.sh
.cache/clangd/index/: aos.hpp.22CAE14BA916B0AD.idx  aos_array_buffer.hpp.934EB0F8BA732FBF.idx  buffer.hpp.CDFB14FC7A815E9E.idx  buffer_tag_traits.hpp.E99BC8A5401D8541.idx  buffer_tags.hpp.367226161C8BFEF7.idx  concepts.hpp.59A6F8FE9343A8E3.idx  config.hpp.35D405E5A1DF1F47.idx  element_pair.hpp.1BBD663961A775B1.idx  flush_behaviour_tests.cpp.4512174C6AF413D8.idx  hash_map_buffer.hpp.FBDFF4E6DB9E48D3.idx  large_matrix_stress_tests.cpp.C263309759514E16.idx  layout_and_type_constraits_tests.cpp.ADBBC14F832376C8.idx  layout_of.hpp.1FBAE9256D08747A.idx  layout_tags.hpp.86A84866F57D1163.idx  matrix.hpp.A90F29E47D58D9DA.idx  matrix_addition.hpp.5DDAC2C266310506.idx  matrix_addition_tests.cpp.045BAAC9118543A6.idx  matrix_mode.hpp.FCBCFC7E14BA59CD.idx  matrix_operator_overloads_tests.cpp.CC7DD653E0B31BEC.idx  matrix_operators.hpp.7A23B51672CB97DB.idx  matrix_tests.cpp.FBF39426C4CEE439.idx  merge.hpp.43784A075AB5B26A.idx  mode_switch_tests.cpp.8588A25A709E7DA9.idx  mode_traits.hpp.B74FC35D0A136FB5.idx  row.hpp.BEA9F5CB5F9A4017.idx  scaler_tests.cpp.D14AA10C9D30386E.idx  scalers.hpp.45CEA95C0B799097.idx  soa.hpp.B2FB70D198B58817.idx  soa_array_buffer.hpp.15B35C62901C1F60.idx  spgemm.hpp.9220E612D92ADBD2.idx  spgemm_tests.cpp.280722BD5BFD6648.idx  spira.hpp.4CC8BD7F20243563.idx  spira_bench.cpp.86325EEE89D94C74.idx  spmv.hpp.C57883799D810E3D.idx  spmv_tests.cpp.1E8E3FA0A667C0CE.idx  traits.hpp.9620C551C9BBCF03.idx  transpose.hpp.B921A0FD964021CD.idx  transpose_tests.cpp.1059DFA7BCC507BC.idx
.github/workflows/: ci.yml
bench/: BM_addOperation.cpp  BM_getOperation.cpp  BM_spmv.cpp  BM_streamAddOperation.cpp  BM_streamGetOperation.cpp  config.hpp  run_benchmark.sh  spira_bench.cpp
bench/google-benchmark/: BM_spmv.cpp  BM_streamAddOperation.cpp  BM_streamGetOperation.cpp  config.hpp  spira_benchmark.cpp
bench/perf-benchmark/: benchmark_perf_spmv.cpp
benchmark-scripts/: enter_benchmark_mode.sh  exit_benchmark_mode.sh
benchmarks/: benchmarks.cpp
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests[1]_include.cmake
build-gdb/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build_bench/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  spira_bench  unit_tests[1]_include.cmake
cmake/: FetchDeps.cmake
docker-scripts/: start_docker.sh
docs/: api-reference.md  architecture.md  build-and-test.md  overview.md
docs/diagrams/: 01-class-diagram.puml  02-state-lifecycle.puml  03-lock-sequence.puml  04-spmv-sequence.puml  05-component-layers.puml  06-partition-layout.puml  07-csr-build-activity.puml  08-kernel-dispatch.puml  09-buffer-hierarchy.puml  10-thread-pool.puml  11-memory-layout.puml  12-deployment.puml
include/spira/: Element.hpp  concepts.hpp  config.hpp  element.hpp  layout.hpp  matrix.hpp  matrix.tpp  row.hpp  spira.hpp  traits.hpp
include/spira/Kernels/: kernels.h
include/spira/algorithms/: accumulate.hpp  matrix_addition.hpp  merge.hpp  scalars.hpp  scalers.hpp  spgemm.hpp  spmv.hpp  transpose.hpp
include/spira/containers/: matrix.hpp  row.hpp
include/spira/kernels/: kernels.h
include/spira/layouts/: aos.hpp  layout_concepts.h  layout_of.hpp  layout_tags.hpp  soa.hpp
include/spira/matrix/: csr_build.hpp  csr_storage.hpp  matrix.hpp  matrix_operators.hpp  row.hpp
include/spira/matrix/buffer/: aos_array_buffer.hpp  buffer.hpp  buffer_base.hpp  buffer_tag_traits.hpp  buffer_tags.hpp  hash_map_buffer.hpp  soa_array_buffer.hpp
include/spira/matrix/buffer/buffer_layout_impls/: aos_array_buffer.hpp  aos_buffer.hpp  hash_map_buffer.hpp  soa_array_buffer.hpp  soa_buffer.hpp
include/spira/matrix/layout/: element_pair.hpp  layout_tags.hpp
include/spira/matrix/layouts/: aos.hpp  element_pair.hpp  layout_base.hpp  layout_of.hpp  layout_tags.hpp  soa.hpp
include/spira/matrix/mode/: base_mode.hpp  matrix_mode.hpp  mode_policy.hpp  mode_traits.hpp
include/spira/matrix/storage/: csr_build.hpp  csr_storage.hpp  csr_storage_aos.hpp  csr_storage_detail.hpp  csr_storage_soa.hpp
include/spira/parallel/: insert_staging.hpp  job.hpp  parallel.hpp  parallel_matrix.hpp  partition.hpp  thread_pool.hpp
include/spira/parallel/algorithms/: accumulate.hpp  matrix_addition.hpp  scalars.hpp  spgemm.hpp  spmv.hpp  transpose.hpp
include/spira/serial/: accumulate.hpp  matrix_addition.hpp  scalars.hpp  serial.hpp  spgemm.hpp  spmv.hpp  transpose.hpp
src/: dummy.cpp  main.cpp
src/kernels/: cpu_detect.h  dispatch.cpp  hw_detect.h  hw_detect.hpp  runtime_config.h  runtime_config.hpp  simd_aliases.h  simd_aliases.hpp
src/kernels/dot_impls/: dot_scalar.cpp
src/kernels/dot_impls/arm/: dot_neon.cpp
src/kernels/dot_impls/x86/: dot_avx.cpp  dot_avx2.cpp  dot_avx512.cpp  dot_sse.cpp
src/kernels/simd_aliases/x86/: simd_avx_aliases.hpp  simd_sse_aliases.hpp
src/kernels/simd_aliases_x86/: simd_avx_aliases.h  simd_sse_aliases.h
tests/: SIMD_dot_operator_tests.cpp  accumulate_algo_tests.cpp  aos_spmv_test.cpp  aos_test.cpp  compaction_tests.cpp  element_test.cpp  flush_behaviour_tests.cpp  large_matrix_stress_tests.cpp  layout_and_type_constraints_tests.cpp  matrix_addition_tests.cpp  matrix_operator_overloads_tests.cpp  matrix_tests.cpp  merge_tests.cpp  mode_switch_tests.cpp  scalar_tests.cpp  scaler_tests.cpp  simd_dot_operator_tests.cpp  soa_spmv_test.cpp  soa_test.cpp  spgemm_tests.cpp  spmv_test.cpp  spmv_tests.cpp  test.cpp  test_matrix.cpp  test_sanity.cpp  transpose_tests.cpp
tests/parallel/: parallel_algorithm_tests.cpp  parallel_matrix_tests.cpp  partition_tests.cpp
tests/serial/: accumulate_algo_tests.cpp  matrix_addition_tests.cpp  scalar_tests.cpp  spgemm_tests.cpp  spmv_tests.cpp  transpose_tests.cpp
